Fix "share the love" not working, fix scrollbar by specifying overflow-x:hidden;

--- a/addons/editor-stage-left/stageleft.css
+++ b/addons/editor-stage-left/stageleft.css
@@ -18,4 +18,5 @@
   -webkit-flex-direction: row-reverse;
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
+  overflow-x: hidden;
 }
